# Speedometer

./: CMakeLists.txt  Main.qml  main.cpp  serial.cpp  serial.h
Animation800x480/: Animation800x480.qmlproject  Animation800x480.qmlproject.qtds  Animation800x480.qmlproject.qtds.966e64c  CMakeLists.txt  qmlmodules
Animation800x480/content/: CMakeLists.txt  InnerRing.qml  Screen01.ui.qml  SpeedoDigits.qml
Animation800x480/imports/: CMakeLists.txt
Animation800x480/imports/Animation800x480/: CMakeLists.txt  qmldir
Animation800x480/imports/Animation800x480/designer/: plugin.metainfo
Animation800x480/src/: app_environment.h  import_qml_plugins.h  main.cpp
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_Animation800x480App.cmake  Qt6_QmlPlugins_Imports_Animation800x480App.rsp
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/.rcc/: qmake_Main.qrc  qrc_Animation800x480App_raw_qml_0.cpp  qrc_qmake_Main.cpp
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/Animation800x480App_autogen/: deps  moc_predefs.h
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/Main/: Animation800x480App_qml_module_dir_map.qrc  qmldir
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/asset_imports/: cmake_install.cmake
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/content/: KWNeedle.qml  LeftElement.qml  SpeedNeedle.qml  Speedometer.qml  cmake_install.cmake  content_qml_module_dir_map.qrc
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/imports/: cmake_install.cmake
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/meta_types/: Animation800x480App_json_file_list.txt  Animation800x480App_json_file_list.txt.timestamp  qt6animation800x480app_debug_metatypes.json.gen
build-Animation800x480-Boot2Qt_6_5_1_Raspberry_Pi_4_64_bit-Debug/qmltypes/: Animation800x480App_foreign_types.txt
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_Animation800x480App.cmake  Qt6_QmlPlugins_Imports_Animation800x480App.rsp
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/.rcc/: Animation800x480App_raw_qml_0.qrc  configuration.qrc  qmake_Main.qrc  qrc_configuration.cpp  qrc_qmake_Main.cpp
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/Animation800x480App_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/Main/: Animation800x480App_qml_module_dir_map.qrc
build-Animation800x480-Desktop_Qt_6_5_1_GCC_64bit-Debug/content/: App.qml  qmldir  (+4 more)
(+921 files in other folders)
